Fixed OrderMapper (and modifications made in OrderServiceImp)